# pheval.svanna

./: README.md  config.yaml  pyproject.toml  tox.ini
src/pheval_svanna/: runner.py  tool_specific_configuration_parser.py
src/pheval_svanna/post_process/: post_process_results_format.py
src/pheval_svanna/prepare/: prepare_commands.py
src/pheval_svanna/run/: run.py
tests/: test_post_process_results_format.py  test_prepare_commands.py
