[tool.poetry]
name = "pheval-svanna"
version = "0.1.0"
description = ""
authors = ["Yasemin Bridges <y.bridges@qmul.ac.uk>"]
readme = "README.md"
packages = [{include = "pheval_svanna", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pheval = {git = "https://github.com/monarch-initiative/pheval.git"}

[tool.poetry.scripts]
pheval-svanna = "pheval_svanna.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
